--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "LIRI",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "liri.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/TimGorodnitski/LIRI#readme",
   "dependencies": {
     "dotenv": "^6.0.0",
+    "moment": "^2.22.2",
+    "node-spotify-api": "^1.0.7",
     "request": "^2.88.0"
   }
 }
